packages/beff-wasm/fixtures/errors/cannot-resolve/r5.ts
export const router5 = {
  router5Nested: {
    [`/hello5`]: { get: (): asd => "Hello!" },
  },
};
